RDM-9342: Match User Profile Gradle files and comment out old ones